--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "font-awesome": "^4.7.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-image": "^1.3.1",
+    "react-native-overlay-section": "^0.1.13",
     "react-router": "^3.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
-    "react-image": "^1.3.1",
-    "react-native-overlay-section": "^0.1.13"
+    "http-server": "0.10.0"
   }
 }
